# central-node

./: .gitignore  README.md  project_setup.ipynb
analysis/2023_analysis_doubleglovo/: DG_analysis_v2.ipynb  DG_analysis_v3.ipynb
analysis/2023_analysis_spm/: README.txt
explanations/what_is_specialties_2024/: default_playground.ipynb
knowledge/inspiration/: inspiration_plots.ipynb
knowledge/sql/: advanced_sql.ipynb  advanced_sql.sql  sql_training_session_2.sql
knowledge/starburst_product_columns/: commerce_event_cols.txt
knowledge/templates/: default_analysis.ipynb  default_playground.ipynb  template.ipynb  vanilla_template.ipynb
notebooks/0000_2024_9_26_templates/: python.py  sql.sql  template_configuration.py  template_plots  template_query_engines.py  template_venv_paths
notebooks/2024_5_instore_prices/: instore_prices.ipynb  instore_prices_v2.ipynb  instore_prices_v3.ipynb  instore_prices_v5.ipynb  traffic.ipynb  traffic_v2.ipynb
notebooks/2024_6_feature_store/: features_reorder.ipynb  features_top_brands.ipynb
notebooks/2024_6_gmv_loss_mismatch/: gmv_loss_mismatch.ipynb
notebooks/2024_6_loyaltycards/: Cart_page_MDE.ipynb  dataframe_structure.ipynb  guidelines_mde_cart.ipynb  loyaltycards.ipynb  loyaltycards_analysis.ipynb
notebooks/2024_7_nsw_osw_cvr/: nsw_osw_cvr.ipynb
notebooks/2024_7_visualization/: 100proposal.txt  visualization.ipynb
notebooks/2024_9_ddp_tracker/: ddp_tracker.ipynb  loyalty_cards.ipynb  readme.md
notebooks/2024_issue_cvr_nsw_vs_old_sw_and_instore_prices/: issue_cvr_nsw_vs_old_sw.ipynb
notebooks/973_2025_02_05_navigation_tab_bar/: navigation_tab_bar.ipynb
notebooks/974_2025_02_03_ddps_management/: gfop_customers_dp.ipynb  integration_quality_dp.ipynb  pna_orders_t1.ipynb  pna_orders_t2.ipynb  pna_products_t1.ipynb  pna_products_t2.ipynb
notebooks/975_2025_01_26_ltho/: how_to_query_ltho.ipynb
notebooks/976_2025_01_13_pna_t1_data_products/: debug_looker.ipynb  looker_t1.ipynb  t1.ipynb
src/: dataframe_movie.py  dataframe_statistics.py  dataframe_visualizer.py  project_setup.py  query_engines.py
utils/: dataset_meta_stats.py  dataset_stats.py  project_setup.py  query_engines.py
venvs/venv_data_mesh_t1/: pyproject.toml
venvs/venv_glovo_experimentation_analytics/: pyproject.toml
venvs/venv_glovo_experimentation_platform/: pyproject.toml
venvs/venv_scientist/: pyproject.toml
(+316 files in other folders)
