[tool.poetry]
name = "venv-glovo-experimentation-platform"
version = "0.1.0"
description = ""
authors = ["JordiCremades4444 <jordicremadesrosell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.3"
glovo-experimentation-analytics = "^2.5.0"
ipykernel = "^6.29.5"
mysql = "^0.0.3"
mysql-connector-python = "^9.1.0"
pymysql = "^1.1.1"
long-term-exp-impact = "^0.0.7"

[[tool.poetry.source]]
name = "glovo-pypi"
url = "https://artifactory.glovoint.com/artifactory/api/pypi/glovo-pypi/simple"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
